deploy/base/builder/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: builder
  annotations:
    # Container-native load balancing on GKE; ignored by the local nginx addon.
    cloud.google.com/neg: '{"ingress": true}'
spec:
  selector:
    app: builder
  ports:
    - name: http
      port: 80
      targetPort: http
